# MCP-server-trends

./: .gitignore  Makefile  PROJ-DESC.md  PROJECT-DESCRIPTION2.md  README.md  USAGE.txt  crt.sh.notion.com.json.sample  discover-hosts-from-domain.py  fetch_mcp_file.py  fetch_subdomains_from_crt.py  httpx.errors.txt  main.py  mcp.json.sample  mcp_results.jsonl  mcp_results.jsonl.sample  pulseserver.json  pulseserver.json.sample  pyproject.toml  pyproject.toml.bkp
app/: Home.py  common.py  ui.py
app/.streamlit/: config.toml  secrets.toml
app/lib/: data.py  privacy.py
app/pages/: 01_Overview.py  02_Exposure_Risk.py  03_Time_Series.py  04_Scan_Diagnostics.py
data/runs/2025-09-06/: domains_tranco_top1k.txt  registry_seeds.jsonl  test-200-notion.com.txt  test-403-docker.io.jsonl  test-500-caixa.gov.br.txt
jobs/: acquire_registry.py  acquire_tranco.py  init_demo_data.py  metrics.py  report.py  scan_remotes.py  scan_wellknown.py
src/: acquire_registry.py  acquire_tranco.py  aquire_registry.py  metrics.py  report.py  scan_wellknown.py
tests/: scan_results.jsonl  test-200-notion.com.jsonl  test-403-docker.io.jsonl
