[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-trends"
version = "0.1.0"
description = "Public web app to scan MCP adoption and show trends"
readme = "README.md"
authors = [{ name = "Philipp Hunold", email = "philipp.hunold@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "streamlit",
  "pandas",
  "httpx[http2]",
  "pydantic",
  "tenacity",
  "tranco",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]   # picks up app/ and any subpackages
